Petite correction d'orthographe

--- a/dhis-web-cache-cleaner/i18n/fr.po
+++ b/dhis-web-cache-cleaner/i18n/fr.po
@@ -19,7 +19,7 @@ msgid "DHIS 2 browser cache cleaner"
 msgstr "Videur du cache navigateur DHIS2"
 
 msgid "Session storage"
-msgstr "Stockate de session"
+msgstr "Stockage de session"
 
 msgid "Local storage"
 msgstr "Stockage local"
