Quelques traductions en plus

--- a/dhis-web-dashboard/i18n/i18n_module_fr.properties
+++ b/dhis-web-dashboard/i18n/i18n_module_fr.properties
@@ -1,28 +1,28 @@
 close=Fermer
-created_by=Créé par
-share=Propriété de partage
-who_has_access=Qui a accés
+created_by=Cr\u00e9\u00e9 par
+share=Param\u00e9tre de partage
+who_has_access=Qui a acc\u00e9s
 can_capture_and_view=Peut saisir
-can_edit_and_view=Peut éditer et voir
-can_view_only=Peut seulement voir
+can_edit_and_view=Peut \u00e9diter et afficher
+can_view_only=Peut seulement afficher
 enter_names=Entrez noms
-external_access=accès externe
-metadata=Métadonnées 
-add_users_and_user_groups=Rajouter utilisateurs et groupes d'utilisateurs
-anyone_can_find_and_view=Tout le monde peut chercher et éditer 
-anyone_can_view_without_a_login=Tout le monde peut chercher et voir sans s'identifier
-anyone_can_find_view_and_edit=Tout le monde peut chercher, voir et éditer
-no_access=Pas d'accès
+external_access=acc\u00e8s externe
+metadata=M\u00e9tadonn\u00e9es 
+add_users_and_user_groups=Ajouter utilisateurs et groupes d'utilisateurs
+anyone_can_find_and_view=Tout le monde peut trouver et \u00e9diter 
+anyone_can_view_without_a_login=Tout le monde peut trouver et afficher sans s'identifier
+anyone_can_find_view_and_edit=Tout le monde peut trouver, afficher et \u00e9diter
+no_access=Pas d'acc\u00e8s
 no_author=Pas d'auteur
-no_manage_access=Vous ne pouvez gérer cet objet.
-public_access=Accès public
+no_manage_access=Vous ne pouvez g\u00e9rer cet objet.
+public_access=Acc\u00e8s public
 
 translate=Traduire
 translation_dialog_title=Traduction
 select_locale=Choisir localisation
 save=Enregistrer
 cancel=Annuler
-select_a_locale_to_enter_translations_for_that_language=choisir localisation pour entrer la traduction pour 
+select_a_locale_to_enter_translations_for_that_language=choisir localisation pour entrer des traductions pour 
 name=Nom
 short_name=Nom court
 description=Description
