--- a/dhis-web-event-reports/i18n/i18n_app_fr.properties
+++ b/dhis-web-event-reports/i18n/i18n_app_fr.properties
@@ -38,7 +38,7 @@ can_view=Peut afficher
 can_edit_and_view=Peut \u00e9diter et afficher
 none=Aucun
 public_access=Acc\u00e8s public
-add_users_and_user_groups=Add users and user groups
+add_users_and_user_groups=Ajouter utilisateurs et groupes
 available=Disponible
 selected=S\u00e9lectionn\u00e9
 indicators=Indicateurs
