--- a/dhis-web-settings/i18n/module/i18n_module_fr.properties
+++ b/dhis-web-settings/i18n/module/i18n_module_fr.properties
@@ -6,8 +6,8 @@ smtp_settings=param\u00e8tres e-mail
 host_name=Nom de l'h\u00f4te
 username=Identifiant
 password=Mot de passe
-refresh_token=Refresh token
-authorization_code=Authorization code
+refresh_token=Rafraîchir le jeton 
+authorization_code=Code d'autorisation
 application_title=Titre de l'application
 dhis-web-maintenance-settings=Param\u00e8tres
 flag=Drapeau
@@ -16,12 +16,13 @@ macos=Mac OS
 portal=Portail
 start_page=Page d'accueil
 no_start_page=Sans Page d'accueil
-intro_general_settings=Customize the system behavior with regard to aggregation strategy, infrastructural data elements and more.
-intro_appearance_settings=Customize the system behavior with regard to application title, style, flag, start page.
-intro_email_settings=Configure the email SMTP setup with regard to host name, user name and password.
+intro_general_settings=Personnaliser le comportement du système en ce qui concerne la stratégie d'agrégation, les éléments de données infrastructurels et plus encore.
+intro_appearance_settings=Personnaliser le comportement du système en ce qui concerne le titre de l'application, le style, le drapeau, la page d'accueil.
+intro_email_settings=Configurer le SMTP du courrier électronique en ce qui concerne le nom d'hôte, le nom d'utilisateur et le mot de passe.
 intro_approval_settings=Configure the levels at which data is approved according to organisation unit level and category option group.
-intro_access_settings=Configure access to the system, like which user role should be used for user self registration.
-intro_data_synchronization = Configure remote server URL and authentication for automatic synchronization of data.
+intro_access_settings=Configurer l'accès au système, comme le rôle de l'utilisateur qui doit être utilisé pour l'auto-enregistrement de l'utilisateur.
+intro_data_synchronization = Configurer le serveur URL distance et l'authentification pour la synchronisation autmatique des données. 
+Configure remote server URL and authentication for automatic synchronization of data.
 intro_calendar_settings=Configure the system calendar and date format. The system supports a wide range of calendars.
 intro_oauth2_clients=Configure which clients are allowed to access this system using OAuth2.
 general_settings=Param\u00e8tres g\u00e9n\u00e9raux
